--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BLACKJACK</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -100,14 +100,14 @@
     <div class="infoWrapper">
         <div class="infoSec">
             <div class="bet">
-                <h2>BET: <span class="amount">0₺</span></h2>
+                <button class="reset r" style="height:50px;">Resetle</button>
                 <h2>Kazanılacak: <span class="amount ifWin">800₺</span></h2>
             </div>
          
             <hr>
 
         </div>
-        <button class="getNewCard">RESETLE</button>
+        <button class="start">BAŞLA</button>
         <button class="stopCarding">KART ALMA</button>
 
         <div class="infoSec">
