--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
     </div>
 </div>
-<h1 id = "player"> SEN </h1>
+<h1 id = "player"></h1>
 
     <script src="app.js"></script>
 </body>
